@@ -4,7 +4,6 @@ Fix ld.so to not be an execution unless it really is
 
 Userspace
 =========
-Add config option to allow admin defined syslog format
 Consider exe & ftype as lists (Use AVL code for matching)
 Add support to rules for using groups/gid
 Does reversing path string improve lookup performance?
