@@ -62,8 +62,8 @@ extern int debug;
 extern int permissive;
 
 int dec_name_to_val(const char *name);
-int load_config(void);
-int reload_config(void);
+int load_config(const conf_t *config);
+int reload_config(const conf_t *config);
 decision_t process_event(event_t *e);
 void make_policy_decision(const struct fanotify_event_metadata *metadata,
 						int fd, uint64_t mask);
